--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .navbar{
-   background-color:  #daac00 !important;
+   background-color:  #daac00;
    padding: 20px;
    
 }
 .nav-item .nav-link{
     color: #fff;
-    font-size: 24px;
+    font-size: 18px;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
+}
+.nav-item .nav-link:hover{
+
+    background-color:#fcc302;
     
 }
 #logo-menu img{
@@ -19,12 +23,13 @@
 background-color: #fcc302;
 border-radius: 0px;
 border: 0px;
-text-decoration: none;
+box-shadow: none !important;
 }
 .form-control::placeholder{
     color: #fff;
     font-size: 17px;
 }
+
 .d-flex .btn{
     width: 70px;
     height: 50px;
@@ -32,6 +37,7 @@ text-decoration: none;
     border-radius: 0px;
     background-color: #00bec9;
     color: #fff;
+    box-shadow: none !important;
 }
 
 #background-menu{
@@ -62,6 +68,9 @@ text-decoration: none;
     color: #fff;
     font-family: 'Poppins',sans-serif;
     font-weight: 600;
+}
+#titulo-menu button:hover{
+    transform: scale(1.10);
 }
 #btn-ourservice{
     background-color: transparent !important;
