Inclusão de novos conteudos na pagina

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+body{
+    font-family: 'Poppins', sans-serif !important; 
+}
 
 .navbar{
    background-color:  #daac00;
@@ -9,7 +12,7 @@
 .nav-item .nav-link{
     color: #fff;
     font-size: 18px;
-    font-family: 'Poppins', sans-serif;
+    
     font-weight: 500;
 }
 .nav-item .nav-link:hover{
@@ -41,20 +44,20 @@ box-shadow: none !important;
     box-shadow: none !important;
 }
 
-#background-menu{
+#background-Amarelo{
     background-color: #fcc302;
-    height: 900px;
+    
   
 }
 #titulo-menu h1{
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 600;
     padding-top: 300px;
     color: #fff;
     font-size: 65px;
 }
 #titulo-menu p {
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 400;
     font-size: 25px;
     color: #fff;
@@ -67,7 +70,7 @@ box-shadow: none !important;
     width: 180px;
     height: 60px;
     color: #fff;
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 600;
 }
 #titulo-menu button:hover{
@@ -79,11 +82,12 @@ box-shadow: none !important;
 }
 #cachorro-menu{
    padding-top: 200px;
+   padding-bottom: 100px;
 }
 
 #titulo-sobre h1{
     padding-top: 200px;
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 1000;
     color: #313243;
     font-size: 50px;
@@ -93,7 +97,7 @@ font-size: 25px;
 }
 
 #titulo-sobre button{
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 800;
     font-size: 20px;
     color: #fff;
@@ -115,14 +119,14 @@ font-size: 25px;
  
 }
 .servicos h1 {
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 800;
     font-size: 50px;
     color: #fff;
 }
 
 .servicos p{
-    font-family: 'Poppins',sans-serif;
+    
    font-weight: 400;
     font-size: 30px;
     color: #fff;
@@ -132,17 +136,18 @@ font-size: 25px;
     padding-top: 50px;
 }
 #titulo-servicos h2{
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 800;
     font-size: 35px;
     color: #fff;
 }
 
 #titulo-servicos p{
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 300;
     font-size: 20px;
     color: #fff;
+    padding-bottom: 50px;
 }
 
 #otite-video{
@@ -152,20 +157,20 @@ font-size: 25px;
 
 #otite-titulo h1{
     padding-top: 200px;
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 600;
     font-size: 45px;
     color: #313243;
 }
 #otite-titulo p {
-    font-family: 'Poppins',sans-serif;
+
     font-weight: 500;
     font-size: 25px;
     color: #313243;
 }
 
 #otite-titulo button{
-    font-family: 'Poppins',sans-serif;
+    
     font-weight: 800;
     font-size: 20px;
     color: #fff;
@@ -174,4 +179,92 @@ font-size: 25px;
     background-color: #fcc302;
     border: 0;
     border-radius: 7px;
+}
+
+.dogs-venda{
+    color: #fff;
+    padding-bottom: 50px;
+    padding-top: 100px;
+}
+.dogs-venda h1{
+    font-weight: 800;
+    font-size: 50px;
+}
+
+#compra-dog{
+    color: #fff;
+}
+
+#compra-dog h1{
+    padding-bottom: 100px;
+}
+#compra-dog h4{
+    font-weight: 800;
+}
+
+#compra-dog span{
+    margin-right: 15px;
+    text-decoration: line-through;
+}
+
+#compra-dog button{
+    margin-top: 40px;
+    background-color: #00bec9;
+    border-radius: 20px;
+    border: 0px;
+    width: 150px;
+    height: 40px;
+    color: #fff;
+    font-weight: 600;
+    margin-bottom: 100px;
+
+}
+#titulo-timevet{
+    padding-top: 100px;
+    color: #fff;
+}
+#titulo-timevet h1{
+    font-weight:bold;
+    color: #313243;
+    font-size: 50px;
+}
+#titulo-timevet p {
+    color: #313243;
+    font-weight: 400;
+}
+#time-vet h4{
+    color: #313243;
+    font-weight: 600;
+}
+#time-vet p{
+    color: #313243;
+    font-weight: 400;
+}
+#time-vet button{
+    border: none;
+    background-color:#fcc302;
+    border-radius: 20px;
+    margin-right: 5px;
+}
+#background-registros{
+    margin-top: 100px;
+    background-image: url(./Assets/Registros.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+    height: 400px;
+    
+
+}
+#registros img{
+    padding-top: 150px;
+    width: 50px;
+}
+#registros h4{
+    font-weight: 800;
+    color: #fff;
+}
+#registros p{
+    font-size: 20px;
+    color: #fff;
 }
